<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_description</name>
  <version>0.0.0</version>
  <description>Package with URDF and description files for Arctos robot arm</description>

  <maintainer email="coenheerink@outlook.com">Coen Heerink</maintainer>

  <license>M.I.T.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
