<?xml version="1.0"?>
<package format="3">
  <name>arctos_hardware_interface</name>
  <version>0.1.0</version>
  <description>ROS2 hardware interface for Arctos</description>
  <maintainer email="coenheerink@outlook.com">Coen Heerink</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

